gulp build, fix padding on small screens

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -130,6 +130,9 @@ footer {
   body {
     padding: 15px;
   }
+  footer div {
+    padding: 15%;
+  }
 }
 
 @media screen and (max-width: 640px) {
